syntax = "proto3";

package google.cloud.apigee.registry.v1alpha1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.google.cloud.apigee.registry.v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "RegistryModelsProto";
option go_package = "apigov.dev/registry/rpc;rpc";

// A Project is a top-level description of a collection of APIs.
// Typically there would be one project for an entire organization.
message Project {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Project"
    pattern : "projects/{project}"
  };

  // Resource name.
  string name = 1;

  // Human-meaningful name.
  string display_name = 2;

  // A detailed description.
  string description = 3;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];
}

// A Product is a top-level description of an API product.
// Products are produced by producers and are commitments to provide services.
message Product {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Product"
    pattern : "projects/{project}/products/{product}"
  };

  // Resource name.
  string name = 1;

  // Human-meaningful name.
  string display_name = 2;

  // A detailed description.
  string description = 3;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // A user-definable description of the availability of this service.
  // Format: free-form, but we expect single words that describe availability,
  // e.g. "NONE", "TESTING", "PREVIEW", "GENERAL", "DEPRECATED", "SHUTDOWN".
  string availability = 6;

  // The recommended version of the API.
  // Format: apis/{api}/versions/{version}
  string recommended_version = 7 [
    (google.api.resource_reference) = {type : "registry.googleapis.com/Version"}
  ];
}

// A Version describes a particular version of an API product.
// Versions are what consumers actually use.
message Version {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Version"
    pattern : "projects/{project}/products/{product}/versions/{version}"
  };

  // Resource name.
  string name = 1;

  // Human-meaningful name.
  string display_name = 2;

  // A detailed description.
  string description = 3;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // A user-definable description of the lifecycle phase of this API version.
  // Format: free-form, but we expect single words that describe API maturity,
  // e.g. "CONCEPT", "DESIGN", "DEVELOPMENT", "STAGING", "PRODUCTION",
  // "DEPRECATED", "RETIRED".
  string state = 6;
}

// A Spec describes a version of an API product in a structured way.
// Specs provide formal descriptions that consumers can use to use a version.
// When specs consist of multiple files, each is a separate spec resource with
// its own name and a common value for the format property.
message Spec {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Spec"
    pattern : "projects/{project}/products/{product}/versions/{version}/specs/"
              "{spec}"
  };

  // Resource name.
  string name = 1;

  // A possibly-hierarchical name used to refer to the file from other files.
  string filename = 2;

  // A detailed description.
  string description = 3;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // A style (format) descriptor for this spec.
  // Possible values include "proto3", "OpenAPI-2.0", "OpenAPI-3.0".
  // This is free-form but we expect that it will eventually be quite structured
  // with an "API Description Format" part and possible "API Style" parts,
  // e.g. "OpenAPI-3.0+Google" for OpenAPI v3 with (hypothetical) Google style
  // constraints.
  string style = 6;

  // The size of the spec file in bytes.
  int32 size_bytes = 7  
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // A hash of the spec file's contents
  string hash = 8
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // The original source URI of the spec file (if one exists).
  // This is an external location that can be used for reference purposes
  // but which may not be authoritative since this external resource may
  // change after the file is retrieved.
  string source_uri = 9;

  // The contents of the spec file. Returned only when the FULL view is requested.
  bytes contents = 10;

  // The revision ID of the spec.
  // A new revision is committed whenever the spec is changed in any way.
  // The format is an 8-character hexadecimal string.
  string revision_id = 11 [
    (google.api.field_behavior) = IMMUTABLE,
    (google.api.field_behavior) = OUTPUT_ONLY];

  // The timestamp that the revision was created.
  google.protobuf.Timestamp revision_create_time = 12
    [(google.api.field_behavior) = OUTPUT_ONLY];
}

// SpecRevisionTags represent tags used to mark spec revisions.
message SpecRevisionTag {
  option (google.api.resource) = {
    type : "registry.googleapis.com/SpecRevisionTag"
    pattern : "projects/{project}/products/{product}/versions/{version}/specs/{spec}/tags/{tag}"
  };

  // The resource name of the tag.
  string name = 1;

  // The resource name at which the tag points.
  string value = 2;
}

// Properties of resources. Properties are unique (single-value) per resource.
message Property {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Property"
    pattern : "projects/{project}/properties/{property}"
    pattern : "projects/{project}/products/{product}/properties/{property}"
    pattern : "projects/{project}/products/{product}/versions/{version}/properties/{property}"
    pattern : "projects/{project}/products/{product}/versions/{version}/specs/{spec}/properties/{property}"
  };

  // Resource name.
  string name = 1;

  // Subject resource name.
  string subject = 2
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Relation name.
  string relation = 3
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Property value.
  oneof value {

    // String value of property.
    string string_value = 6;
    
    // Integer value of property.
    int64 int64_value = 7;

    // Double value of property.
    double double_value = 8;

    // Boolean value of property.
    bool bool_value = 9;

    // Bytes value of property.
    bytes bytes_value = 10;

    // Message value of property.
    // (-- api-linter: core::0146::any=disabled
    //     aip.dev/not-precedent: Allow users to specify any message type. --)
    google.protobuf.Any message_value = 11;
  }
}

// Labels on resources. Labels are similar to properties but are in a separate namespace and without values.
message Label {
  option (google.api.resource) = {
    type : "registry.googleapis.com/Label"
    pattern : "projects/{project}/labels/{label}"
    pattern : "projects/{project}/products/{product}/labels/{label}"
    pattern : "projects/{project}/products/{product}/versions/{version}/labels/{label}"
    pattern : "projects/{project}/products/{product}/versions/{version}/specs/{spec}/labels/{label}"
  };

  // Resource name.
  string name = 1;

  // Subject resource name.
  string subject = 2
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Label name.
  string label = 3
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 4
    [(google.api.field_behavior) = OUTPUT_ONLY];

  // Last update timestamp.
  google.protobuf.Timestamp update_time = 5
    [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Views of Specs.
enum SpecView {
  // The default / unset value.
  // The API will default to the BASIC view.
  SPEC_VIEW_UNSPECIFIED = 0;

  // Include everything but the file contents.
  BASIC = 1;

  // Include everything.
  FULL = 2;
}